apply plugin: 'java'
apply plugin: 'eclipse'

sourceCompatibility=17
targetCompatibility=17

// Activation of Switch Expressions Preview 
tasks.withType(JavaCompile) { 
   options.compilerArgs += ["--enable-preview"] 
} 

repositories
{
	mavenCentral();
}

dependencies
{
    // testCompile => testImplementation
    
	// JUnit 4 Support
	testImplementation "junit:junit:4.13.2"
	testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.8.2"
  	
  	// JUnit 5
	testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.8.2" 
	testImplementation "org.junit.jupiter:junit-jupiter-engine:5.8.2"
		
	// Asssert J
	testImplementation "org.assertj:assertj-core:3.22.0"
	
	// Parameterized tests
	testImplementation "org.junit.jupiter:junit-jupiter-params:5.8.2"
	
	// Migration Support to Enable Rules in JUnit 5
	testImplementation "org.junit.jupiter:junit-jupiter-migrationsupport:5.8.2"
	
	// Mockito
	testImplementation "org.mockito:mockito-core:4.5.1"
	testImplementation "org.mockito:mockito-junit-jupiter:4.5.1"	
	
	implementation "com.fasterxml.jackson.core:jackson-databind:2.13.2.2"
	
}

// JUnit 5 aktivieren
test {
    useJUnitPlatform()
}


test {
	// für die Beispiele wollen wir Fehler nicht als Build-Fehler werten, da die Beispiel
	// bewusst ein paar Fehler integriert haben
  	ignoreFailures = true
}

